--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
 
 #titulo {
     text-align: center;
-    font-size: 40px;
-    color: brown;
+    font-size: 50px;
+    color: rgb(17, 4, 39);
 
 }
 
 .texto {
     text-align: center;
+    font-size: 40px;
     color:rgb(197, 60, 156);
 }
 
